[197069] support for entities in jars - resource model